update ui, docker for the project